--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "description": "Backend service for making JWT pizzas",
   "version": "1.0.0",
   "main": "index.js",
+  "jest": {
+    "moduleDirectories": ["node_modules", "src"]
+  },
   "scripts": {
     "start": "cd src && node index.js",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "license": "MIT",
   "dependencies": {
@@ -19,6 +23,5 @@
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
     "jest": "^29.7.0"
-  },
-  "type": "module"
+  }
 }
