--- a/package.json
+++ b/package.json
@@ -3,14 +3,8 @@
   "description": "Backend service for making JWT pizzas",
   "version": "1.0.0",
   "main": "index.js",
-  "jest": {
-    "moduleDirectories": ["node_modules", "src"]
-  },
   "scripts": {
-    "start": "cd src && node index.js",
-    "lint": "eslint .",
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "start": "cd src && node index.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -18,10 +12,5 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7"
-  },
-  "devDependencies": {
-    "eslint": "^9.15.0",
-    "globals": "^15.12.0",
-    "jest": "^29.7.0"
   }
 }
