--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "run": "cd src && node index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "license": "MIT",
   "dependencies": {
