--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
+    "eslint": "^9.15.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
