--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "eslint": "^9.15.0",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "supertest": "^7.0.0"
   }
 }
