--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,11 @@ jobs:
               url: 'https://pizza-factory.cs329.click',
               apiKey: '${{ secrets.FACTORY_API_KEY }}',
             },
+            metrics: {
+            source: 'jwt-pizza-service',
+            userId: ${{ secrets.METRICS_USER_ID }},
+            url: '${{ secrets.METRICS_URL }}',
+            apiKey: '${{ secrets.METRICS_API_KEY }}',
           };" > src/config.js
 
       - name: Tests
