--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
-    "eslint": "^9.15.0",
+    "eslint": "^9.16.0",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "supertest": "^7.0.0"
-  }
+  },
+  "keywords": [],
+  "author": ""
 }
