--- a/jest.config.json
+++ b/jest.config.json
@@ -7,5 +7,6 @@
         "functions": 80,
         "lines": 80
       }
-    }
+    },
+    "testPathIgnorePatterns": ["/node_modules/", "/dist/"]
   }
